--- a/child_pages/cc-elections/Candidates/shanahan.html
+++ b/child_pages/cc-elections/Candidates/shanahan.html
@@ -79,42 +79,65 @@
         </dialog>
 
 
-        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 
 <div class="container">
 
-    <button class="quick-summary-reopen">quick summary</button>
-
     <div class="title-info">
-       <h2>Nicole Shanahan</h2>
-        <div class="running-for">
-            <div class="running-title">Running for: </div>
-            <div class="position">Vice President</div>
-        </div>
-        <div class="incum-or-challenger">
-            <div class="incumbent inactive">Incumbent</div>
-            <div class="challenger active">Challenger</div> 
-        </div>
-    </div>
-    <div class="candidate-pic-box">
-        <img class="cover" src="../../../assets/candidates/shanahan.jfif" class="candidate-pic">
-    </div>
-    <div class="candidate-agenda">
-        <h4 class="sub-heading">Website</h4>
-        <div class="website">
-            <a href="https://www.kennedy24.com/about-shanahan" target="_blank" rel="noopener noreferrer" class="website-link">Campaign Site</a>
-            <a href="https://www.facebook.com/NicoleAShanahan" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
-            <a href="https://www.instagram.com/theshanawow/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
-            <a href="https://twitter.com/NicoleShanahan?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
-            <a href="https://www.youtube.com/@Nicole-Shanahan" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
-        </div>
+        <h2>Nicole Shanahan</h2>
+         <div class="running-for">
+             <div class="running-title">Running for: </div>
+             <div class="position">US Vice President</div>
+         </div>
+         <div class="incum-or-challenger">
+             <div class="incumbent inactive">Incumbent</div>
+             <div class="challenger inactive">Challenger</div> 
+         </div>
+     </div>
 
-        <br>
-        <br>
+     <div class="candidate-pic-box">
+         <img class="cover" src="../../../assets/candidates/shanahan.jfif" class="candidate-pic">
+         <div class="candidate-pic-box-content">
+             <h4 class="sub-heading">Websites</h4>
+             <div class="website">     
+                <a href="https://www.kennedy24.com/about-shanahan" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Site</button></a>            
+                <a href="https://www.facebook.com/NicoleAShanahan" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>            
+                 <!-- <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a> -->
+                 <!-- <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" style="background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;"><i class="fa-brands fa-instagram"></i></a> -->
+                 <a href="https://www.instagram.com/theshanawow/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>            
+
+                 <a href="https://twitter.com/NicoleShanahan?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>
+                 <!-- <a href="https://twitter.com/Bashawforsenate" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>             -->
+                 <a href="https://www.youtube.com/@Nicole-Shanahan" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">YouTube</button></a>            
+
+                </div>
+             <button class="quick-summary-reopen">quick candidate summary</button>
+
+             <div class="election-date">
+                 <p>This election is on November 5th, 2024</p>
+             </div>
+
+             <div class="animal-box">
+                 <img src="../../../assets/candidates/mahaLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/mahaLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/mahaLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/mahaLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/mahaLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/mahaLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/mahaLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/mahaLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/mahaLogo.png" alt="democrt donkey mascot" class="donkey">
+             </div>
+         </div>
+     </div>
+
+    
+    <div class="candidate-agenda">
+        
 
         <h4 class="sub-heading">individual agenda</h4>
-            <div class="agenda-thesis">
+            <div class="agenda-thesis can-sec">
                 <br>
                 <ul>
                     <li>
@@ -126,7 +149,7 @@
             <br>
 
             <h4 class="sub-heading">experience</h4>
-            <div class="experience">
+            <div class="experience can-sec">
                 <ul>
                     <li></li>               
                 </ul>
