--- a/child_pages/cc-elections/Candidates/vance.html
+++ b/child_pages/cc-elections/Candidates/vance.html
@@ -107,7 +107,7 @@
         <h2>J.D. Vance</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
-             <div class="position">US Senate</div>
+             <div class="position">US Vice President</div>
          </div>
          <div class="incum-or-challenger">
              <div class="incumbent inactive">Incumbent</div>
@@ -140,15 +140,15 @@
              </div>
 
              <div class="animal-box">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/libertarianLogo.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
