--- a/child_pages/cc-elections/Candidates/walz.html
+++ b/child_pages/cc-elections/Candidates/walz.html
@@ -95,7 +95,7 @@
         <h2>Tim Walz</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
-             <div class="position">US Senate</div>
+             <div class="position">US Vice President</div>
          </div>
          <div class="incum-or-challenger">
              <div class="incumbent inactive">Incumbent</div>
