--- a/child_pages/cc-elections/us_president_2024.html
+++ b/child_pages/cc-elections/us_president_2024.html
@@ -144,7 +144,7 @@
         <button class="quick-summary-reopen">quick election summary</button>
 
         <div class="sb-top-box"> 
-            <h3>ELECTION DATE: November 7th, 2023</h3>
+            <h3>ELECTION DATE: November 5th, 2024</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
             <h3>US PRESIDENT</h3>
@@ -364,7 +364,7 @@
                         <h4>Socialism and Liberation</h4>
                         <h6>Socialismo y Liberación</h6>  
                     </div>
-                    <div id="independent-candidates">
+                    <div id="socialismAndLiberation-candidates">
                         <div class="table-titles">
                             <div class="title">
                                 <p class="title-big">OFFICE TITLE</p>
@@ -401,7 +401,7 @@
                             <div class="a">
                                 <div class="a-row-1">
                                     <div class="org">
-                                        <p>Independent</p> 
+                                        <p>Socialism and Liberation</p> 
                                     </div>
                                     <div class="first-name">
                                         <a href="Candidates/de-la-cruz.html">Claudia</a>
@@ -432,7 +432,7 @@
                             <h4>Socialist Workers Party</h4>
                             <h6>Partido Socialista de los Trabajadores</h6>  
                         </div>
-                        <div id="independent-candidates">
+                        <div id="socialistWorkersParty-candidates">
                             <div class="table-titles">
                                 <div class="title">
                                     <p class="title-big">OFFICE TITLE</p>
@@ -469,7 +469,7 @@
                                 <div class="a">
                                     <div class="a-row-1">
                                         <div class="org">
-                                            <p>Independent</p> 
+                                            <p>Socialist Workers Party</p> 
                                         </div>
                                         <div class="first-name">
                                             <a href="Candidates/fruit.html">Rachele</a>
@@ -501,7 +501,7 @@
                                 <h4>Socialist Equality</h4>
                                 <h6>Igualdad Socialista</h6>  
                             </div>
-                            <div id="independent-candidates">
+                            <div id="socialistEquality-candidates">
                                 <div class="table-titles">
                                     <div class="title">
                                         <p class="title-big">OFFICE TITLE</p>
@@ -538,7 +538,7 @@
                                     <div class="a">
                                         <div class="a-row-1">
                                             <div class="org">
-                                                <p>Independent</p> 
+                                                <p>Socialist Equality</p> 
                                             </div>
                                             <div class="first-name">
                                                 <a href="Candidates/kishore.html">Joseph</a>
@@ -570,7 +570,7 @@
                                     <h4>Libertarian Party</h4>
                                     <h6>Partido Libertario</h6>  
                                 </div>
-                                <div id="independent-candidates">
+                                <div id="libertarian-candidates">
                                     <div class="table-titles">
                                         <div class="title">
                                             <p class="title-big">OFFICE TITLE</p>
@@ -607,7 +607,7 @@
                                         <div class="a">
                                             <div class="a-row-1">
                                                 <div class="org">
-                                                    <p>Independent</p> 
+                                                    <p>Libertarian</p> 
                                                 </div>
                                                 <div class="first-name">
                                                     <a href="Candidates/oliver.html">Chase</a>
@@ -639,7 +639,7 @@
                                         <h4>Green Party</h4>
                                         <h6>Partido Verde</h6>  
                                     </div>
-                                    <div id="independent-candidates">
+                                    <div id="green-candidates">
                                         <div class="table-titles">
                                             <div class="title">
                                                 <p class="title-big">OFFICE TITLE</p>
@@ -676,7 +676,7 @@
                                             <div class="a">
                                                 <div class="a-row-1">
                                                     <div class="org">
-                                                        <p>Independent</p> 
+                                                        <p>Green Party</p> 
                                                     </div>
                                                     <div class="first-name">
                                                         <a href="Candidates/stein.html">Jill</a>
@@ -708,7 +708,7 @@
                                             <h4>US Constitution Party</h4>
                                             <h6>Partido de la Constitución de EE. UU.</h6>  
                                         </div>
-                                        <div id="independent-candidates">
+                                        <div id="usConstitutionParty-candidates">
                                             <div class="table-titles">
                                                 <div class="title">
                                                     <p class="title-big">OFFICE TITLE</p>
@@ -745,7 +745,7 @@
                                                 <div class="a">
                                                     <div class="a-row-1">
                                                         <div class="org">
-                                                            <p>Independent</p> 
+                                                            <p>U.S. Constitution Party</p> 
                                                         </div>
                                                         <div class="first-name">
                                                             <a href="Candidates/terry.html">Randall A.</a>
